add the POST /auth/register route for registering a new user

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ NODE_ENV=development
 MONGO_URL=mongodb+srv://vidiboretsv_db_user:67RRTqlrqWvujI9g@cluster0.htliu1a.mongodb.net/products_db?retryWrites=true&w=majority&appName=Cluster0
 
 
+# {
+#     "name": "XXX",
+#     "email": "xxx@mail.com",
+#     "password": "12345qwerty"
+# }
